entire website completed and updated after project. only missing october 4th memories of the east

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,7 +19,7 @@
     "password": "BigFun728#",
     //"port": "22",
     
-    "remote_path": "/new_pages/",
+    "remote_path": "/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
